Improved the directories use by the application.
